Add ready and under construction statuses to buildings on server-side
